[package]
name = "wifinina"
version = "0.0.1"
authors = ["Fiona Hopkins <fiona@draughtleaders.com>"]
edition = "2018"

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"]}
nb = "0.1.2"

genio = { version = "0.2.0", default-features = false, optional = true }
void = { version = "1.0.2", default-features = false, optional = true }

[features]
default = []
genio-traits = ["genio", "void"]
