[package]
name = "wifinina"
version = "0.0.1"
authors = ["Fiona Hopkins <fiona@fionawh.im>"]
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
edition = "2018"

[dependencies]
embedded-hal = { version = "~0.2.3", features = ["unproven"]}
nb = "~0.1"

genio = { version = "0.2.0", default-features = false, optional = true }
void = { version = "1.0.2", default-features = false, optional = true }

cortex-m = {version = "~0.6", optional = true }
cortex-m-rt = { version="~0.6", optional = true }
pyportal = { version="~0.4.0", optional = true, features=["unproven"] }
panic-halt = { version="~0.2", optional = true }

[features]
default = []
genio-traits = ["genio", "void"]
pyportal-examples = ["pyportal", "void", "cortex-m", "cortex-m-rt", "panic-halt"]

[[example]]
name = "pyportal-ap"
required-features = ["pyportal-examples"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"
